# ChangeLog for media-libs/rubberband
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/rubberband/ChangeLog,v 1.11 2009/09/26 13:22:11 aballier Exp $

*rubberband-1.4 (26 Sep 2009)

  26 Sep 2009; Alexis Ballier <aballier@gentoo.org> +rubberband-1.4.ebuild,
  +files/rubberband-1.4-gcc44.patch, +files/rubberband-1.4-install.patch:
  version bump

  23 Jun 2009; Alexis Ballier <aballier@gentoo.org>
  -rubberband-1.0.1.ebuild, -files/rubberband-1.0.1-gcc43.patch,
  -rubberband-1.2.ebuild, -files/rubberband-1.2-gcc43.patch:
  remove old

  11 Jun 2009; Markus Meier <maekke@gentoo.org> rubberband-1.3.ebuild:
  amd64 stable, bug #273092

  05 Jun 2009; Samuli Suominen <ssuominen@gentoo.org> rubberband-1.3.ebuild,
  +files/rubberband-1.3-gcc44.patch:
  Fix compile with GCC 4.4

*rubberband-1.3 (16 Mar 2009)

  16 Mar 2009; Alexis Ballier <aballier@gentoo.org> +rubberband-1.3.ebuild:
  version bump

*rubberband-1.2 (11 Jul 2008)

  11 Jul 2008; Alexis Ballier <aballier@gentoo.org>
  +files/rubberband-1.2-gcc43.patch, +rubberband-1.2.ebuild:
  version bump

  15 May 2008; Markus Rothe <corsair@gentoo.org> rubberband-1.0.1.ebuild:
  Added ~ppc; bug #215033

  28 Apr 2008; Samuli Suominen <drac@gentoo.org>
  +files/rubberband-1.0.1-gcc43.patch, rubberband-1.0.1.ebuild:
  GCC 4.3 fix wrt #219539, thanks to Peter Alfredsen.

  27 Mar 2008; Samuli Suominen <drac@gentoo.org> rubberband-1.0.1.ebuild:
  amd64 stable

  28 Feb 2008; Alexis Ballier <aballier@gentoo.org> rubberband-1.0.1.ebuild:
  keyword ~x86 too

*rubberband-1.0.1 (26 Feb 2008)

  26 Feb 2008; Alexis Ballier <aballier@gentoo.org> +metadata.xml,
  +rubberband-1.0.1.ebuild:
  initial import
