@@ -6,14 +6,16 @@ AUX rubberband-1.4-gcc44.patch 471 RMD160 4c3af37d1ed8bd967cb6fcb70ad61679081536
 AUX rubberband-1.4-install.patch 1080 RMD160 dfbc75c881fda829c89639c152712bb0f93f1b42 SHA1 84567fcd606073ee7d12f9265caebbbabad89448 SHA256 58be5fa591b986ec7d1dac039cb61b49508dbe0fdf3ea632a2bb90cd61388a7f
 DIST rubberband-1.3.tar.bz2 94302 RMD160 29730bbb7e96440169eae6404873405d3da9fafa SHA1 a1a2fb45959953b0c58e91ca4340b869356ebff3 SHA256 2866afc5868508769ae6f0058506c4cd35634a6a5edefb53afe93ef5258c2b3c
 DIST rubberband-1.4.tar.bz2 101700 RMD160 16b8c4efb9b22d3f7765b87042e92d7b6047e968 SHA1 e0adddf27be321e2fbffbd93f161e583a35a523d SHA256 45d60ef0141ba82ed68484dd9e337462a02f40f493e9d22848c7f149a45fdb26
+DIST rubberband-1.5.0.tar.bz2 106782 RMD160 175ca0b4a0f6fd6e1f857acbe4936126228545d3 SHA1 45c793bc50703d6b6083e75d6116447b8ced991e SHA256 cb9f29220d035f182de154e9a8b67eedac58ab487e983c29d048c93e5f7c1da1
 EBUILD rubberband-1.3.ebuild 1164 RMD160 bdcd0e77c21f420b1b5a5bf18195f778c95d1fb2 SHA1 9fd30e9296ceb6a595caee595ede98b6ad3de4e3 SHA256 c23ea323214655fda64fe4ae7fa666f968ee026943bdde3a791fc78c540515b9
 EBUILD rubberband-1.4.ebuild 1211 RMD160 c82ba123dbc5e0584076fc86a4b0375841e76403 SHA1 f8538855dfd2cf7cd9ff660d9678ddf128f041d0 SHA256 2850732cc570a002ed904c09f2e4bd45ee6f55191cbfa043569bd59d3b32f03f
-MISC ChangeLog 1734 RMD160 0d88a0c698744658efefd804a31ac0e2311cc112 SHA1 115c2ae3ffe4ed81a8f0e488909418b5a9204556 SHA256 ee32737a12a2c33811da3959c5c8365e925a4abd940ac5c98868ffbeb8804b3b
+EBUILD rubberband-1.5.0.ebuild 1114 RMD160 9d28fe36998a098f658771c7ae3abcbcbdf71260 SHA1 f158942d5e991d4a82934fd7ad01739fb34c66a1 SHA256 976df3e5eb5d527b06573fb704ae9a4a5231cf106200b77de18b4b9058f8cd18
+MISC ChangeLog 1863 RMD160 a60b07699ed587009f6be47b0bab54193d3889f2 SHA1 32c9f522b4c70e08831a70db7c6625bc1bb32b50 SHA256 ce2c28093072a16dcfc1173164a896a28d62d016673de3b97f3a2c16eac9a600
 MISC metadata.xml 161 RMD160 2738d17827a71b5ccbadae4c4f909d2b57d147b0 SHA1 90201ddb830142147774cc7b7b5178fbd0a9af0c SHA256 0ba191421eefd954d1efe9f6c3384e8c8d7455d35a7e79457272e1c29211b09e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.11 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkq+FYgACgkQvFcC4BYPU0pFjgCdGNsGU+E5Jbf8XLH3aaJB5lyS
-S9kAnArF57mqAR7kjklaS69Qm3/fjlpE
-=sHUM
+iEYEARECAAYFAkvhHXgACgkQvFcC4BYPU0pxXgCeO/HJ5RRfFqS7xuuIVixRK9VM
+EA8AnRxU0NGJieX6f8TlDffFm0HcdE/y
+=IGE/
 -----END PGP SIGNATURE-----
