@@ -1,0 +1,35 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/rubberband/Attic/rubberband-1.5.0.ebuild,v 1.1 2010/05/05 07:25:39 aballier Exp $
+
+EAPI=2
+inherit multilib
+
+DESCRIPTION="An audio time-stretching and pitch-shifting library and utility program"
+HOMEPAGE="http://www.breakfastquay.com/rubberband/"
+SRC_URI="http://code.breakfastquay.com/attachments/download/1/${P}.tar.bz2"
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~x86"
+IUSE=""
+
+RDEPEND="media-libs/vamp-plugin-sdk
+	media-libs/libsamplerate
+	media-libs/libsndfile
+	media-libs/ladspa-sdk
+	=sci-libs/fftw-3*"
+DEPEND="${RDEPEND}
+	dev-util/pkgconfig"
+
+src_install() {
+	emake INSTALL_BINDIR="${D}/usr/bin" \
+		INSTALL_INCDIR="${D}/usr/include/rubberband" \
+		INSTALL_LIBDIR="${D}/usr/$(get_libdir)" \
+		INSTALL_VAMPDIR="${D}/usr/$(get_libdir)/vamp" \
+		INSTALL_LADSPADIR="${D}/usr/$(get_libdir)/ladspa" \
+		INSTALL_LRDFDIR="${D}/usr/share/ladspa/rdf" \
+		INSTALL_PKGDIR="${D}/usr/$(get_libdir)/pkgconfig" \
+		install || die "emake install failed"
+	dodoc CHANGELOG
+}
